iac/apps/traefik-tuning/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-prometheus-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    # Маршрут для Grafana
    - match: Host(`myapps.archonmac.local`) || Host(`archonmac.local`) && PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: grafana-service
          port: 80
#      middlewares:
#        - name: otel-tracing@kubernetescrd@monitoring # <--- ИЗМЕНЕНО: добавлено @monitoring
    # Маршрут для Prometheus
    - match: Host(`myapps.archonmac.local`) || Host(`archonmac.local`) && PathPrefix(`/prometheus`)
      kind: Rule
      services:
        - name: prometheus-service
          port: 9090
#      middlewaresΩlewares:
#        - name: prometheus-strip-prefix@monitoring
#        - name: otel-tracing@kubernetescrd@monitoring # <--- ИЗМЕНЕНО: добавлено @monitoring
  tls:
    secretName: myapps-minipc-local-tls
