iac/apps/traefik-tuning/traefik-dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik-dashboard-auth
    removeHeader: true

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-strip-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /traefikadmin

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingressroute
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    # Правило 1: Для основного входа в дашборд по поддиректории
    - match: Host(`archonmac.local`) && PathPrefix(`/traefikadmin`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-strip-prefix # Удаляем префикс '/traefikadmin'
          namespace: kube-system
        - name: traefik-dashboard-auth
          namespace: kube-system
      services:
        - name: api@internal # Направляем на внутренний сервис Traefik API/Dashboard
          kind: TraefikService

    # Правило 2: Для внутренних запросов дашборда (API и статические ресурсы),
    # которые могут делаться по абсолютному пути (без '/traefikadmin')
    - match: Host(`archonmac.local`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      middlewares:
        - name: traefik-dashboard-auth # Применяем аутентификацию
          namespace: kube-system
      services:
        - name: api@internal # Направляем напрямую на api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls-secret
